Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2315

Symbian debugging does not work with gdb 7.2

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • Qt Creator 2.1.0
    • Qt Creator 2.0.0
    • Windows Vista x64
      GNU gdb (GDB) 7.2
      App TRK 3.1.2
      TRK API 3.5
    • 4118d70182e6260e9bc5b2e69c419f5a72cad12b

      When trying to debug a program running on a Symbian device with gdb 7.2, Creator fails with the following message from TrkGdbAdapter::handleTargetRemote : "Connecting to TRK server adapter failed: Bogus trace status reply from target: timeout"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes