Debugger[TRK]: Handle trace point requests of gdb 7.2+

Task-number: QTCREATORBUG-2315